--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,10 @@ docs/_build/
 
 # PyBuilder
 target/
+/data/ATRA_cluster.csv
+/data/ATRA_cluster_metrics.csv
+/data/saved_csvs/
+/data/saved_csvs_atra_metrics/
+/data/saved_csvs_sample/
+/data/saved_figures/
+/data/saved_figures_sample/
